--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <div class="book-showcase-wrapper">
             <article class="book-showcase">
                 <div class="book-visual">
-                    <img src="your-book-cover.jpg" alt="书籍《你的书名》封面" class="book-cover-style">
+                    <img src="my-great-book-cover.png" alt="相对论" class="book-cover-style">
                 </div>
                 <div class="book-actions">
                     <h2>Download links</h2>
