--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
             max-width: 100%;
             height: auto;
             border-radius: 8px; 
-            /* 在深色背景下，封面的阴影可以更微妙或采用不同方式，这里暂时保留之前的，可按需调整或移除 */
             box-shadow: 0 5px 20px rgba(0,0,0,0.25); 
         }
         .book-actions {
@@ -136,6 +135,26 @@
             background-color: transparent; 
         }
 
+        /* 语言切换器样式 */
+        .language-switcher {
+            margin-bottom: 15px; 
+            font-size: 0.95em; 
+        }
+        .language-switcher a, .language-switcher span {
+            color: #a0a0a0; 
+            text-decoration: none;
+            padding: 0 8px; 
+            transition: color 0.2s ease;
+        }
+        .language-switcher a:hover {
+            color: #f5f5f5; 
+            text-decoration: underline;
+        }
+        .language-switcher span {
+            color: #f5f5f5; 
+            font-weight: bold; 
+        }
+
         /* 响应式设计 */
         @media (min-width: 768px) {
             .book-showcase {
@@ -189,6 +208,9 @@
     </div>
 
     <footer>
+        <div class="language-switcher">
+            <span>中文</span> | <a href="index_en.html">English</a>
+        </div>
         <p>&copy; <span id="currentYear"></span> 你的姓名或网站名. 版权所有.</p>
     </footer>
 
