--- a/support.html
+++ b/support.html
@@ -77,7 +77,9 @@
 <body>
     <div class="container">
         <h1>支持作者</h1>
-        <p>如果我的作品对您有所帮助，欢迎通过以下方式支持我，非常感谢！</p>
+        <p>感谢您的慷慨支持！
+         这是一份纯粹自愿且无回报的赞助。
+         您的每一份心意，都是对作者持续探索与创作的宝贵激励。</p>
 
         <div class="qr-codes">
             <div class="qr-code-item">
