--- a/support.html
+++ b/support.html
@@ -87,7 +87,7 @@
                 <p>微信支付</p>
             </div>
             <div class="qr-code-item">
-                <img src="images/alipay_qr.png" alt="支付宝二维码">
+                <img src="images/alipay_qr.jpg" alt="支付宝二维码">
                 <p>支付宝</p>
             </div>
         </div>
