--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     </div>
 
     <div class="main-content-wrapper">
-        <img src="my-great-book-cover.png" alt="书籍封面 - 相对论" class="book-cover-main"> 
+        <img src="/images/china.jpg" alt="书籍封面 - 相对论" class="book-cover-main"> 
         
         <h1 class="author-title">作者姓名 <span class="license-hint">(开放许可声明)</span></h1>
         
