--- a/index_en.html
+++ b/index_en.html
@@ -184,7 +184,7 @@
     </div>
 
     <div class="main-content-wrapper">
-        <img src="my-great-book-cover.png" alt="Book Cover Image" class="book-cover-main"> 
+        <img src="/images/ENGLISH.jpg" alt="Book Cover Image" class="book-cover-main"> 
         
         <h1 class="author-title">Author Name <span class="license-hint">(Open License Statement)</span></h1>
         
