--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <div class="main-content-wrapper">
         <img src="/images/china.jpg" alt="书籍封面 - 相对论" class="book-cover-main"> 
         
-        <h1 class="author-title">作者姓名 <span class="license-hint">(开放许可声明)</span></h1>
+        <h1 class="author-title">《相关论》 <span class="license-hint">(开放许可声明)</span></h1>
         
         <p class="author-intro">
             这里是关于作者或书籍的一段简介文字，可以详细介绍作品的核心理念、创作背景等。力求简洁而引人入胜。请替换此处的示例文本。
@@ -220,7 +220,7 @@
             </div>
         </div>
         </div> <footer>
-        <p>&copy; <span id="currentYear"></span> 你的姓名或网站名. 版权所有.</p>
+        <p>&copy; <span id="currentYear"></span> © 2024 汪雄伟 版权所有</p>
     </footer>
 
     <script>
