--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <h1 class="author-title">《相关论》 <span class="license-hint">(开放许可声明)</span></h1>
         
         <p class="author-intro">
-            这里是关于作者或书籍的一段简介文字，可以详细介绍作品的核心理念、创作背景等。力求简洁而引人入胜。请替换此处的示例文本。
+            本著作《相关论》由汪雄伟创作，采用 知识共享 署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0 International) 许可协议 进行许可。
         </p>
         
         <div class="action-buttons-group">
@@ -220,7 +220,7 @@
             </div>
         </div>
         </div> <footer>
-        <p>&copy; <span id="currentYear"></span> © 2024 汪雄伟 版权所有</p>
+        <p>&copy; <span id="currentYear"></span>汪雄伟 版权所有</p>
     </footer>
 
     <script>
