--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     </div>
 
     <div class="main-content-wrapper">
-        <img src="/images/china.jpg" alt="书籍封面 - 相对论" class="book-cover-main"> 
+        <img src="/images/CHINA.jpg" alt="书籍封面 - 相对论" class="book-cover-main"> 
         
         <h1 class="author-title">《相关论》 <span class="license-hint">(开放许可声明)</span></h1>
         
@@ -220,7 +220,7 @@
             </div>
         </div>
         </div> <footer>
-        <p>&copy; <span id="currentYear"></span>汪雄伟 版权所有</p>
+        <p>&copy; <span id="currentYear"></span> 汪雄伟 版权所有</p>
     </footer>
 
     <script>
