--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     <div class="main-content-wrapper">
         <img src="/images/CHINA.jpg" alt="书籍封面 - 《相关论》" class="book-cover-main"> 
         
-        <h1 class="author-title">《相关论》 <span class="license-hint">(开放许可声明)</span></h1>
+        <h1 class="author-title">《相关论》 <span class="license-hint">开放许可声明</span></h1>
         
         <p class="author-intro">
             本著作《相关论》采用知识共享许可协议 (CC BY-NC-SA 4.0 International)。<a href="#" id="intro_toggle_link" class="intro-toggle-link">(查看许可详情与作品信息)</a>
