--- a/index_en.html
+++ b/index_en.html
@@ -244,7 +244,7 @@
         <h1 class="author-title">'Relatedness Theory' <span class="license-hint">(Open License Statement)</span></h1>
         
         <p class="author-intro">
-            This work, 'Relatedness Theory', is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0 International) license. <a href="#" id="intro_toggle_link" class="intro-toggle-link">(View License Details & Work Information)</a>
+            This work, 'Relatedness Theory', is licensed under the Creative Commons license (CC BY-NC-SA 4.0 International). <a href="#" id="intro_toggle_link" class="intro-toggle-link">(View License Details & Work Information)</a>
         </p>
         
         <div id="license_details_container" style="display: none;">
@@ -277,8 +277,7 @@
 
         <div class="action-buttons-group">
             <a href="#" id="toggle-downloads-button" class="action-button primary-button">Download Works</a>
-            <a href="support.html" class="action-button secondary-button">Support Author</a>
-        </div>
+            <a href="support.html" class="action-button secondary-button">Support Author</a> </div>
 
         <div id="download-options-container" style="display: none;">
             <div class="download-group-revealed">
@@ -337,10 +336,10 @@
                 event.preventDefault();
                 if (licenseDetailsContainer.style.display === 'none' || licenseDetailsContainer.style.display === '') {
                     licenseDetailsContainer.style.display = 'block';
-                    this.textContent = '(Hide Details)'; // Changed to English
+                    this.textContent = '(Hide Details)'; 
                 } else {
                     licenseDetailsContainer.style.display = 'none';
-                    this.textContent = '(View License Details & Work Information)'; // Changed to English
+                    this.textContent = '(View License Details & Work Information)'; 
                 }
             });
         }
