--- a/index_en.html
+++ b/index_en.html
@@ -281,21 +281,21 @@
 
         <div id="download-options-container" style="display: none;">
             <div class="download-group-revealed">
-                <a href="downloads/《相关论》(1).docx" download class="action-button revealed-download-button">
+                <a href="downloads/Relatedness Theory.docx" download class="action-button revealed-download-button">
                     <span class="icon">⇩</span> Download .docx
                 </a>
                 <p class="format-description-revealed">.docx is suitable for users who need to edit or read in-depth on a computer.</p>
             </div>
             
             <div class="download-group-revealed">
-                <a href="downloads/《相关论》.epub" download class="action-button revealed-download-button">
+                <a href="downloads/Relatedness Theory.epub" download class="action-button revealed-download-button">
                     <span class="icon">⇩</span> Download .epub
                 </a>
                 <p class="format-description-revealed">.epub is suitable for users who use e-readers or mobile phones/tablets for mobile reading.</p>
             </div>
             
             <div class="download-group-revealed">
-                <a href="downloads/《相关论》.pdf" download class="action-button revealed-download-button">
+                <a href="downloads/Relatedness Theory.pdf" download class="action-button revealed-download-button">
                     <span class="icon">⇩</span> Download .pdf
                 </a>
                 <p class="format-description-revealed">.pdf is suitable for users who need to preserve the original layout or print.</p>
