--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
         <div id="download-options-container" style="display: none;">
             <div class="download-group-revealed">
-                <a href="downloads/《相关论》(1).docx" download class="action-button revealed-download-button">
+                <a href="downloads/《相关论》.docx" download class="action-button revealed-download-button">
                     <span class="icon">⇩</span> Download .docx
                 </a>
                 <p class="format-description-revealed">.docx 适合需要编辑或在电脑上深度阅读的用户。</p>
