--- a/download_page.html
+++ b/download_page.html
@@ -113,7 +113,7 @@
         <h1>下载《相关论》</h1>
         
         <div class="download-group-revealed">
-            <a href="downloads/《相关论》(1).docx" download class="action-button revealed-download-button">
+            <a href="downloads/《相关论》.docx" download class="action-button revealed-download-button">
                 <span class="icon">⇩</span> 下载 .docx 格式
             </a>
             <p class="format-description-revealed">.DOCX  
