--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
         <h1 class="author-title">《相关论》</h1> 
         
         <section class="open-license-statement-section">
-            <h3 class="open-license-title">《相关论》开放许可声明</h3>
+            <h3 class="open-license-title">《相关论》· 汪雄伟</h3>
             <p class="license-abstract">
-                本著作《相关论》采用知识共享许可协议（CC BY-NC-SA 4.0 International)进行许可。 
-                <a href="#" id="license_details_toggle_link" class="details-toggle-link">(查看详情)</a>
+                本著作采用知识共享许可协议（CC BY-NC-SA 4.0 International）开放许可。
+                <a href="#" id="license_details_toggle_link" class="details-toggle-link">（查看许可详情与作品信息）</a>
             </p>
             <div id="license_details_full_content" style="display: none;">
                 <p style="margin-top:15px;"><strong>作者：</strong>汪雄伟</p>
