--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     this.textContent = '收起详情';
                 } else {
                     licenseDetailsFullContent.style.display = 'none';
-                    this.textContent = '查看详情';
+                    this.textContent = '查看许可详情与作品信息';
                 }
             });
         }
