--- a/download_page_en.html
+++ b/download_page_en.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Download 'Relatedness Theory' - Author's Homepage</title>
+    <title>'Relatedness Theory: An Exploration from Ontological Foundations to a Unified Framework of Existence'</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -46,12 +46,13 @@
             flex-grow: 1; 
         }
         .download-content-wrapper h1 {
-            font-size: 1.8em; 
+            font-size: 1.6em;  /* Adjusted font-size for longer title */
             color: #222222; 
             margin-top: 0;
             margin-bottom: 30px;
             font-weight: 600; 
             text-align: center;
+            line-height: 1.4; /* Added line-height for better readability on wrap */
         }
 
         .download-group-revealed { 
@@ -110,7 +111,7 @@
     </div>
 
     <div class="download-content-wrapper">
-        <h1>Download 'Relatedness Theory'</h1>
+        <h1>Relatedness Theory: An Exploration from Ontological Foundations to a Unified Framework of Existence</h1>
         
         <div class="download-group-revealed">
             <a href="downloads/Relatedness Theory：An Exploration from Ontological Foundations to a Unified Framework of Existence.docx" download class="action-button revealed-download-button">
@@ -132,7 +133,14 @@
             </a>
             <p class="format-description-revealed">.PDF Preserves original book layout, suitable for computer reading and printing.</p>
         </div>
-    </div> 
+
+        <div class="download-group-revealed">
+            <a href="downloads/Relatedness Theory_ A Relational-Geometric and Dynamic Architecture for Self-Consciousness.docx" download class="action-button revealed-download-button">
+                <span class="icon">⇩</span> Download '...Self-Consciousness' (.docx)
+            </a>
+            <p class="format-description-revealed">.DOCX Word document, convenient for copying, editing, referencing, and AI processing.</p>
+        </div>
+        </div> 
     
     <footer>
         <p>&copy; <span id="currentYear"></span> Wang Xiongwei. All rights reserved.</p>
