--- a/download_page.html
+++ b/download_page.html
@@ -119,8 +119,7 @@
         
         <div class="download-group-revealed">
             <a href="downloads/《相关论：从本体论基础到统一存在框架的探索》.docx" download class="action-button revealed-download-button">
-                <span class="icon">⇩</span> 
-                <span class="button-text">下载《相关论：从本体论基础到统一存在框架的探索》.docx</span>
+                <span class="icon">⇩</span> 下载 .docx 格式
             </a>
             <p class="format-description-revealed">.DOCX  
               Word文档，方便复制、编辑、引用和AI处理。</p>
@@ -137,7 +136,7 @@
         <div class="download-group-revealed">
             <a href="downloads/《相关论：自我意识的关系几何动力学》.docx" download class="action-button revealed-download-button">
                 <span class="icon">⇩</span>
-                <span class="button-text">下载《相关论：自我意识的关系几何动力学》.docx</span>
+                <span class="button-text">下载《相关论：从本体论基础到统一存在框架的探索》.docx</span>
             </a>
             <p class="format-description-revealed">.DOCX  
               Word文档，方便复制、编辑、引用和AI处理。</p>
