--- a/download_page.html
+++ b/download_page.html
@@ -99,6 +99,23 @@
             padding-left: 5px; 
         }
         
+        /* 新增：分割线样式 */
+        hr.section-divider {
+            border: 0;
+            height: 1px;
+            background-color: #dddddd;
+            margin: 40px 5%; /* 上下留出足够间距，左右缩进5% */
+        }
+        /* 新增：小标题样式 */
+        h2.sub-heading {
+            font-size: 1.3em;
+            color: #444444;
+            text-align: center;
+            font-weight: 600;
+            margin-top: 0;
+            margin-bottom: 20px;
+        }
+
         footer {
             text-align: center;
             padding: 20px; 
@@ -134,6 +151,11 @@
 适用于手机、平板和电子阅读器，文字随屏幕调整。
 </p>
         </div>
+        
+        <hr class="section-divider">
+
+        <h2 class="sub-heading">相关著作</h2>
+
         <div class="download-group-revealed">
             <a href="downloads/《相关论：自我意识的关系几何动力学》.docx" download class="action-button revealed-download-button">
                 <span class="icon">⇩</span>
