--- a/download_page.html
+++ b/download_page.html
@@ -39,25 +39,16 @@
             width: 90%;
             max-width: 700px; 
             margin: 30px auto;
-            padding: 20px 30px; /* 增加左右内边距 */
+            padding: 30px; /* 调整内边距以补偿H1的移除 */
             background-color: #ffffff;
             border-radius: 12px;
             box-shadow: 0 6px 20px rgba(0,0,0,0.1);
             flex-grow: 1; 
         }
-        /* 主标题 H1 */
-        .download-content-wrapper h1 {
-            font-size: 1.8em;  
-            color: #222222; 
-            margin-top: 10px; /* 调整上边距 */
-            margin-bottom: 40px; /* 增加与下方内容的间距 */
-            font-weight: 600; 
-            text-align: center;
-            line-height: 1.4; 
-        }
-        /* 小标题 H2 */
+        /* H1 样式不再需要，已被移除 */
+
         h2.sub-heading {
-            font-size: 1.2em; /* 调整字号以适应长文本 */
+            font-size: 1.2em; 
             color: #444444;
             text-align: center;
             font-weight: 600;
@@ -133,8 +124,6 @@
     </div>
 
     <div class="download-content-wrapper">
-        <h1>下载《相关论》</h1>
-        
         <h2 class="sub-heading">《相关论：从本体论基础到统一存在框架的探索》</h2>
         <div class="download-group-revealed">
             <a href="downloads/《相关论：从本体论基础到统一存在框架的探索》.docx" download class="action-button revealed-download-button">
