--- a/download_page_en.html
+++ b/download_page_en.html
@@ -39,19 +39,27 @@
             width: 90%;
             max-width: 700px; 
             margin: 30px auto;
-            padding: 30px; /* Adjusted padding to compensate for H1 removal */
+            padding: 20px 30px; 
             background-color: #ffffff;
             border-radius: 12px;
             box-shadow: 0 6px 20px rgba(0,0,0,0.1);
             flex-grow: 1; 
         }
-        
+        .download-content-wrapper h1 {
+            font-size: 1.8em;  
+            color: #222222; 
+            margin-top: 10px; 
+            margin-bottom: 40px; 
+            font-weight: 600; 
+            text-align: center;
+            line-height: 1.4; 
+        }
         h2.sub-heading {
             font-size: 1.2em; 
             color: #444444;
             text-align: center;
             font-weight: 600;
-            margin-top: 0; /* Sub-heading at top of container doesn't need extra margin */
+            margin-top: 0;
             margin-bottom: 20px;
             line-height: 1.5;
         }
@@ -123,9 +131,11 @@
     </div>
 
     <div class="download-content-wrapper">
+        <h1>Download 'Relatedness Theory'</h1>
+        
         <h2 class="sub-heading">'Relatedness Theory: An Exploration from Ontological Foundations to a Unified Framework of Existence'</h2>
         <div class="download-group-revealed">
-            <a href="downloads/《相关论：从本体论基础到统一存在框架的探索》.docx" download class="action-button revealed-download-button">
+            <a href="downloads/Relatedness Theory： An Exploration from Ontological Foundations to a Unified Framework of Existence.docx" download class="action-button revealed-download-button">
                 <span class="icon">⇩</span> 
                 <span class="button-text">Download .docx format</span>
             </a>
@@ -133,7 +143,7 @@
         </div>
 
         <div class="download-group-revealed">
-            <a href="downloads/《相关论》从本体论基础到统一存在框架的探索 - 汪雄伟.epub" download class="action-button revealed-download-button">
+            <a href="downloads/Relatedness Theory： An Exploration from Ontological Foundations to a Unified Framework of Existence.epub" download class="action-button revealed-download-button">
                 <span class="icon">⇩</span> Download .epub format
             </a>
             <p class="format-description-revealed">.EPUB Suitable for mobile phones, tablets, and e-readers; text reflows with screen size.</p>
@@ -143,7 +153,7 @@
 
         <h2 class="sub-heading">'Relatedness Theory: A Relational-Geometric and Dynamic Architecture for Self-Consciousness'</h2>
         <div class="download-group-revealed">
-            <a href="downloads/《相关论：自我意识的关系几何动力学》.docx" download class="action-button revealed-download-button">
+            <a href="downloads/Relatedness Theory_ A Relational-Geometric and Dynamic Architecture for Self-Consciousness.docx" download class="action-button revealed-download-button">
                 <span class="icon">⇩</span>
                 <span class="button-text">Download .docx format</span>
             </a>
