--- a/download_page.html
+++ b/download_page.html
@@ -135,7 +135,7 @@
         
         <h2 class="sub-heading">《相关论：从本体论基础到统一存在框架的探索》</h2>
         <div class="download-group-revealed">
-            <a href="downloads/Relatedness Theory： An Exploration from Ontological Foundations to a Unified Framework of Existence.docx" download class="action-button revealed-download-button">
+            <a href="downloads/《相关论：从本体论基础到统一存在框架的探索》.docx" download class="action-button revealed-download-button">
                 <span class="icon">⇩</span> 
                 <span class="button-text">下载 .docx 格式</span>
             </a>
@@ -144,7 +144,7 @@
         </div>
 
         <div class="download-group-revealed">
-            <a href="downloads/Relatedness Theory： An Exploration from Ontological Foundations to a Unified Framework of Existence.epub" download class="action-button revealed-download-button">
+            <a href="downloads/《相关论：从本体论基础到统一存在框架的探索》.epub" download class="action-button revealed-download-button">
                 <span class="icon">⇩</span> 下载 .epub 格式
             </a>
             <p class="format-description-revealed">.EPUB
@@ -156,7 +156,7 @@
 
         <h2 class="sub-heading">《相关论：自我意识的关系几何动力学》</h2>
         <div class="download-group-revealed">
-            <a href="downloads/Relatedness Theory_ A Relational-Geometric and Dynamic Architecture for Self-Consciousness.docx" download class="action-button revealed-download-button">
+            <a href="downloads/《相关论：自我意识的关系几何动力学》.docx" download class="action-button revealed-download-button">
                 <span class="icon">⇩</span>
                 <span class="button-text">下载 .docx 格式</span>
             </a>
