--- a/download_page.html
+++ b/download_page.html
@@ -39,21 +39,14 @@
             width: 90%;
             max-width: 700px; 
             margin: 30px auto;
-            padding: 20px 30px; 
+            /* 修改点：调整内边距以补偿移除H1后的空间 */
+            padding: 30px; 
             background-color: #ffffff;
             border-radius: 12px;
             box-shadow: 0 6px 20px rgba(0,0,0,0.1);
             flex-grow: 1; 
         }
-        .download-content-wrapper h1 {
-            font-size: 1.8em;  
-            color: #222222; 
-            margin-top: 10px; 
-            margin-bottom: 40px; 
-            font-weight: 600; 
-            text-align: center;
-            line-height: 1.4; 
-        }
+        /* H1 样式不再需要，已被移除 */
         h2.sub-heading {
             font-size: 1.2em; 
             color: #444444;
@@ -131,8 +124,6 @@
     </div>
 
     <div class="download-content-wrapper">
-        <h1>下载《相关论》</h1>
-        
         <h2 class="sub-heading">《相关论：从本体论基础到统一存在框架的探索》</h2>
         <div class="download-group-revealed">
             <a href="downloads/《相关论：从本体论基础到统一存在框架的探索》.docx" download class="action-button revealed-download-button">
@@ -144,7 +135,7 @@
         </div>
 
         <div class="download-group-revealed">
-            <a href="downloads/《相关论：从本体论基础到统一存在框架的探索》.epub" download class="action-button revealed-download-button">
+            <a href="downloads/《相关论》从本体论基础到统一存在框架的探索 - 汪雄伟.epub" download class="action-button revealed-download-button">
                 <span class="icon">⇩</span> 下载 .epub 格式
             </a>
             <p class="format-description-revealed">.EPUB
