--- a/download_page_en.html
+++ b/download_page_en.html
@@ -39,27 +39,21 @@
             width: 90%;
             max-width: 700px; 
             margin: 30px auto;
-            padding: 20px 30px; 
+            /* Changed: Adjusted padding to compensate for H1 removal */
+            padding: 30px; 
             background-color: #ffffff;
             border-radius: 12px;
             box-shadow: 0 6px 20px rgba(0,0,0,0.1);
             flex-grow: 1; 
         }
-        .download-content-wrapper h1 {
-            font-size: 1.8em;  
-            color: #222222; 
-            margin-top: 10px; 
-            margin-bottom: 40px; 
-            font-weight: 600; 
-            text-align: center;
-            line-height: 1.4; 
-        }
+        /* H1 styles removed as the element is gone */
+        
         h2.sub-heading {
             font-size: 1.2em; 
             color: #444444;
             text-align: center;
             font-weight: 600;
-            margin-top: 0;
+            margin-top: 0; 
             margin-bottom: 20px;
             line-height: 1.5;
         }
@@ -131,11 +125,9 @@
     </div>
 
     <div class="download-content-wrapper">
-        <h1>Download 'Relatedness Theory'</h1>
-        
         <h2 class="sub-heading">'Relatedness Theory: An Exploration from Ontological Foundations to a Unified Framework of Existence'</h2>
         <div class="download-group-revealed">
-            <a href="downloads/Relatedness Theory：An Exploration from Ontological Foundations to a Unified Framework of Existence.docx" download class="action-button revealed-download-button">
+            <a href="downloads/Relatedness Theory： An Exploration from Ontological Foundations to a Unified Framework of Existence.docx" download class="action-button revealed-download-button">
                 <span class="icon">⇩</span> 
                 <span class="button-text">Download .docx format</span>
             </a>
@@ -143,7 +135,7 @@
         </div>
 
         <div class="download-group-revealed">
-            <a href="downloads/Relatedness Theory：An Exploration from Ontological Foundations to a Unified Framework of Existence.epub" download class="action-button revealed-download-button">
+            <a href="downloads/Relatedness Theory： An Exploration from Ontological Foundations to a Unified Framework of Existence.epub" download class="action-button revealed-download-button">
                 <span class="icon">⇩</span> Download .epub format
             </a>
             <p class="format-description-revealed">.EPUB Suitable for mobile phones, tablets, and e-readers; text reflows with screen size.</p>
